Fix scrollbar track visibility

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
+    background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
